# xreferee

./: CHANGELOG.md  LICENSE.md  README.md  cabal.project  stack.yaml  xreferee.cabal
.github/workflows/: benchmark.yml  build.yml  lint.yml  release.yml
bench/: Main.hs
data/: gen.py  load.py
data/fixtures/: num_labels=1000_max_file_lines=1000_max_file_tree_depth=5_max_num_subdirs=2_max_files_per_dir=1000_3.json  num_labels=1000_max_file_lines=1000_max_file_tree_depth=5_max_num_subdirs=2_max_files_per_dir=1000_8.json  num_labels=1000_max_file_lines=1000_max_file_tree_depth=5_max_num_subdirs=2_max_files_per_dir=1000_9.json  num_labels=1000_max_file_lines=1000_max_file_tree_depth=5_max_num_subdirs=5_max_files_per_dir=20_0.json  num_labels=1000_max_file_lines=1000_max_file_tree_depth=5_max_num_subdirs=5_max_files_per_dir=20_1.json
scripts/: release_notes.py
src/: Main.hs
src/XReferee/: Report.hs  SearchResult.hs
test/XReferee/: GitUtils.hs  IntegrationSpec.hs  ReportSpec.hs  SearchResultSpec.hs  TestUtils.hs
test/XReferee/TestUtils/: API.hs  Fixtures.hs  Git.hs
test/XReferee/__snapshots__/: ReportSpec.snap.md
