cabal-version: 3.0

name: xreferee
version: 1.0.0
synopsis: Validate cross references
description: Validate cross references.
homepage: https://github.com/brandonchinn178/xreferee#readme
bug-reports: https://github.com/brandonchinn178/xreferee/issues
author: Brandon Chinn <brandonchinn178@gmail.com>
maintainer: Brandon Chinn <brandonchinn178@gmail.com>
license: BSD-3-Clause
license-file: LICENSE.md
category: Tools
build-type: Simple
extra-source-files:
  test/XReferee/__snapshots__/ReportSpec.snap.md
  CHANGELOG.md
  README.md

source-repository head
  type: git
  location: https://github.com/brandonchinn178/xreferee

library
  hs-source-dirs: src
  exposed-modules:
    XReferee.Report
    XReferee.SearchResult
  build-depends:
      base < 5
    , containers
    , process
    , text
  default-language: GHC2021
  ghc-options: -Wall -Wcompat

executable xreferee
  main-is: src/Main.hs
  build-depends:
      base
    , optparse-applicative
    , text
    , xreferee
  default-language: GHC2021
  ghc-options: -Wall -Wcompat

test-suite referee-tests
  type: exitcode-stdio-1.0
  ghc-options: -F -pgmF=skeletest-preprocessor
  build-tool-depends: skeletest:skeletest-preprocessor
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    XReferee.SearchResultSpec
    XReferee.ReportSpec
    XReferee.TestUtils
  build-depends:
      base
    , containers
    , directory
    , filepath
    , process
    , skeletest
    , temporary
    , text
    , xreferee
  default-language: GHC2021
  ghc-options: -Wall -Wcompat
